--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-parse-auth",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "Authentication library for Next.js using Parse Server",
   "files": [
     "dist",
@@ -11,6 +11,11 @@
       "require": "./dist/index.js",
       "import": "./dist/index.mjs",
       "types": "./dist/index.d.ts"
+    },
+    "./hooks": {
+      "require": "./dist/hooks/index.js",
+      "import": "./dist/hooks/index.mjs",
+      "types": "./dist/hooks/index.d.ts"
     }
   },
   "main": "./dist/index.js",
