--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
+    "@tanstack/react-query": "^5.74.4",
     "next": ">=15.0.0",
     "parse": ">=6.0.0",
     "react": ">=19.0.0"
