--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
   ],
   "exports": {
     ".": {
+      "types": "./dist/next/index.d.ts",
       "require": "./dist/next/index.js",
-      "import": "./dist/next/index.mjs",
-      "types": "./dist/next/index.d.ts"
+      "import": "./dist/next/index.mjs"
     },
     "./client": {
+      "types": "./dist/next/client/index.d.ts",
       "require": "./dist/next/client/index.js",
-      "import": "./dist/next/client/index.mjs",
-      "types": "./dist/next/client/index.d.ts"
+      "import": "./dist/next/client/index.mjs"
     },
-    "./parse": {
+    "./parse-server": {
+      "types": "./dist/parse/index.d.ts",
       "require": "./dist/parse/index.js",
-      "import": "./dist/parse/index.mjs",
-      "types": "./dist/parse/index.d.ts"
+      "import": "./dist/parse/index.mjs"
     }
   },
   "main": "./dist/next/index.js",
@@ -28,7 +28,8 @@
   "types": "./dist/next/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup ./src"
+    "build": "tsup ./src",
+    "release": "pnpm version $1 && git push && git push --tags && pnpm build && pnpm publish"
   },
   "repository": {
     "type": "git",
@@ -38,7 +39,6 @@
     "parse",
     "server",
     "auth",
-    "adapter",
     "siwe"
   ],
   "author": "0xtiby <https://github.com/0xtiby>",
