--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-parse-auth",
+  "name": "parse-server-nextjs",
   "version": "0.2.9",
   "description": "Authentication library for Next.js using Parse Server",
   "files": [
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/0xtiby/next-parse-auth.git"
+    "url": "git+https://github.com/0xtiby/parse-server-nextjs.git"
   },
   "keywords": [
     "parse",
@@ -46,9 +46,9 @@
   "author": "0xtiby <https://github.com/0xtiby>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/0xtiby/next-parse-auth/issues"
+    "url": "https://github.com/0xtiby/parse-server-nextjs/issues"
   },
-  "homepage": "https://github.com/0xtiby/next-parse-auth#readme",
+  "homepage": "https://github.com/0xtiby/parse-server-nextjs#readme",
   "devDependencies": {
     "@types/parse": "^3.0.9",
     "@types/react": "^19.1.1",
